--- a/index.html
+++ b/index.html
@@ -101,7 +101,14 @@
 
     <section>
       <h2 class="section-title">About Me</h2>
-      <p>I love turning security theory into working demos. I design clear policies, build tools that catch sneaky behavior, and explain the why behind every control.</p>
+        <div class="about-container">
+      <img src="photo_small.jpg" alt="Kristen Christiansen" class="profile-photo" />
+      <div>
+        <p>I love turning security theory into working demos. I design clear policies, build tools that catch sneaky behavior, and explain the why behind every control.</p>
+        <a class="btn" href="Kristen%20Christiansen%20Resume.pdf" target="_blank">View My Resume</a>
+      </div>
+    </div>
+
     </section>
   </main>
 
