Update resume link in About section

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       <img src="photo_small.jpg" alt="Kristen Christiansen" class="profile-photo" />
       <div>
         <p>I love turning security theory into working demos. I design clear policies, build tools that catch sneaky behavior, and explain the why behind every control.</p>
-        <a class="btn" href="Kristen%20Christiansen%20Resume.pdf" target="_blank">View My Resume</a>
-      </div>
+                    <a class="btn" href="kristen_resume.pdf" target="_blank">View My Resume</a>
+          </div>
     </div>
 
     </section>
