--- a/index.html
+++ b/index.html
@@ -3,117 +3,175 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kristen Christiansen — Cybersecurity Portfolio</title>
-  <meta name="description" content="Hands-on security projects: VIP event insider threat policy, honeypot, log anomaly detection, and security headers scanner."/>
-  <meta property="og:title" content="Kristen Christiansen — Cybersecurity Portfolio"/>
-  <meta property="og:description" content="Hands-on security projects and code."/>
-  <meta property="og:type" content="website"/>
+  <title>Kristen Christiansen — Security Portfolio</title>
+
+  <!-- Readable, calm typography -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛡️</text></svg>">
 </head>
 <body>
-  <header class="wrap header">
-    <div class="brand">
-      <span class="badge">CYBERSECURITY</span>
-      <h1>Kristen Christiansen</h1>
-      <p class="lede">Hands-on projects that show how I think, build, and defend.</p>
-      <nav class="links">
-        <a href="mailto:">Email</a>
-        <a href="https://github.com/khchristiansen91-spec/cybersecurity-portfolio">GitHub</a>
-        <!-- add LinkedIn/website later -->
+
+  <!-- Simple top nav -->
+  <header class="site-header">
+    <div class="wrap header-inner">
+      <div class="brand">
+        <span class="brand-dot" aria-hidden="true"></span>
+        <a href="#" class="brand-name">Kristen Christiansen</a>
+      </div>
+      <nav class="nav">
+        <a href="#projects">Projects</a>
+        <a href="#resume-embed">Résumé</a>
+        <a href="#about">About</a>
       </nav>
     </div>
   </header>
 
+  <!-- HERO: split layout with photo and tagline -->
+  <section class="hero">
+    <div class="wrap hero-inner">
+      <div class="hero-content">
+        <h1 class="hero-title">Security with an artist’s eye</h1>
+        <p class="hero-subtitle">Calm, clear, human‑centered defensive work.</p>
+        <div class="hero-actions">
+          <a class="btn btn-primary" href="kristen_resume.pdf" target="_blank" rel="noopener">View Résumé (PDF)</a>
+          <a class="btn btn-ghost" href="#resume-embed" rel="noopener">Read Inline ↓</a>
+        </div>
+      </div>
+      <div class="hero-photo-holder">
+        <img src="photo_small.jpg" alt="Portrait of Kristen Christiansen" class="hero-photo" />
+      </div>
+    </div>
+  </section>
+
   <main class="wrap">
-    <section>
+
+    <!-- Featured Projects Section -->
+    <section id="projects" class="section">
       <h2 class="section-title">Featured Projects</h2>
       <div class="grid">
-        <!-- 01 -->
+        <!-- Project 1 -->
         <article class="card">
-          <div class="card-top">
-            <div class="emoji">🍿️</div>
-            <h3>Insider Threat Mitigation for VIP Events</h3>
-            <p>Policy framework + case study for reducing insider risk at high-profile events.</p>
-          </div>
-          <ul class="meta">
-            <li>Focus: Policy, Threat Modeling, Insider Risk</li>
-            <li>Deliverable: PDF + README</li>
-          </ul>
-          <div class="actions">
-            <a class="btn" href="01-insider-threat-vip-events/Insider_Threat_Mitigation_VIP_Events.pdf" target="_blank">Read the PDF</a>
-            <a class="btn ghost" href="01-insider-threat-vip-events/">Repo Folder</a>
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">🕉️</div>
+            <h3>VIP Event Insider‑Threat Policy</h3>
+            <p>Least‑privilege access, reporting pathways, and continuous monitoring for high‑stakes events.</p>
+            <ul class="meta">
+              <li>Focus: People, Process & Detection</li>
+              <li>Deliverables: Policy doc, training plan</li>
+            </ul>
+            <div class="actions">
+              <a class="btn btn-ghost" href="01-insider-threat-vip-events/README.md" target="_blank" rel="noopener">Details</a>
+              <a class="btn btn-primary" href="01-insider-threat-vip-events/" target="_blank" rel="noopener">Repo</a>
+            </div>
           </div>
         </article>
 
-        <!-- 02 -->
+        <!-- Project 2 -->
         <article class="card">
-          <div class="card-top">
-            <div class="emoji">🔵️</div>
-            <h3>HoneyTrap Honeypot (Flask)</h3>
-            <p>Deceptive login portal that logs attempts for analysis; Docker-ready.</p>
-          </div>
-          <ul class="meta">
-            <li>Stack: Python, Flask, Docker</li>
-            <li>Focus: Detection, Deception</li>
-          </ul>
-          <div class="actions">
-            <a class="btn" href="02-honeytrap-honeypot/README.md">How to Run</a>
-            <a class="btn ghost" href="02-honeytrap-honeypot/">Repo Folder</a>
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">🕵️</div>
+            <h3>Honeypot & Alerting</h3>
+            <p>Deceptive services attract misuse inside a segmented lab, with alerting on interaction.</p>
+            <ul class="meta">
+              <li>Focus: Detection engineering</li>
+              <li>Deliverables: Config, runbook</li>
+            </ul>
+            <div class="actions">
+              <a class="btn btn-ghost" href="02-honeytrap-honeypot/README.md" target="_blank" rel="noopener">Details</a>
+              <a class="btn btn-primary" href="02-honeytrap-honeypot/" target="_blank" rel="noopener">Repo</a>
+            </div>
           </div>
         </article>
 
-        <!-- 03 -->
+        <!-- Project 3 -->
         <article class="card">
-          <div class="card-top">
-            <div class="emoji">📈</div>
-            <h3>Log Anomaly Detection</h3>
-            <p>Generates auth logs and trains Isolation Forest to surface suspicious events.</p>
-          </div>
-          <ul class="meta">
-            <li>Stack: Python, Pandas, scikit-learn</li>
-            <li>Focus: ML for Security</li>
-          </ul>
-          <div class="actions">
-            <a class="btn" href="03-log-anomaly-detection/README.md">How to Run</a>
-            <a class="btn ghost" href="03-log-anomaly-detection/">Repo Folder</a>
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">📊</div>
+            <h3>Log Anomaly Spotter</h3>
+            <p>Baselines user access and flags deviations using simple statistical thresholds and workflows.</p>
+            <ul class="meta">
+              <li>Focus: Practical detection</li>
+              <li>Deliverables: Rules, dashboard</li>
+            </ul>
+            <div class="actions">
+              <a class="btn btn-ghost" href="03-log-anomaly-detection/README.md" target="_blank" rel="noopener">Details</a>
+              <a class="btn btn-primary" href="03-log-anomaly-detection/" target="_blank" rel="noopener">Repo</a>
+            </div>
           </div>
         </article>
 
-        <!-- 04 -->
+        <!-- Project 4 -->
         <article class="card">
-          <div class="card-top">
-            <div class="emoji">🧪</div>
-            <h3>Security Headers Scanner</h3>
-            <p>CLI to check CSP, HSTS, and other critical headers across multiple targets.</p>
-          </div>
-          <ul class="meta">
-            <li>Stack: Python, requests, Threads</li>
-            <li>Focus: AppSec, Automation</li>
-          </ul>
-          <div class="actions">
-            <a class="btn" href="04-security-headers-scanner/README.md">How to Run</a>
-            <a class="btn ghost" href="04-security-headers-scanner/">Repo Folder</a>
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">🔒</div>
+            <h3>Security Headers Auditor</h3>
+            <p>CLI tool and checklist for consistent HTTP security headers during reviews.</p>
+            <ul class="meta">
+              <li>Focus: Web hardening</li>
+              <li>Deliverables: Checklist, sample config</li>
+            </ul>
+            <div class="actions">
+              <a class="btn btn-ghost" href="04-security-headers-scanner/README.md" target="_blank" rel="noopener">Details</a>
+              <a class="btn btn-primary" href="04-security-headers-scanner/" target="_blank" rel="noopener">Repo</a>
+            </div>
           </div>
         </article>
       </div>
     </section>
 
-    <section>
-      <h2 class="section-title">About Me</h2>
-        <div class="about-container">
-      <img src="photo_small.jpg" alt="Kristen Christiansen" class="profile-photo" />
-      <div>
-        <p>I love turning security theory into working demos. I design clear policies, build tools that catch sneaky behavior, and explain the why behind every control.</p>
-                    <a class="btn" href="kristen_resume.pdf" target="_blank">View My Resume</a>
-          </div>
-    </div>
+        <!-- Résumé Embed -->
+    <section id="resume-embed" class="section resume-embed">
+      <h2 class="section-title">Résumé</h2>
+      <object data="kristen_resume.pdf" type="application/pdf" class="resume-frame">
+        <p>Unable to display the résumé. <a href="kristen_resume.pdf" target="_blank" rel="noopener">Download PDF</a></p>
+      </object>
+    </section>
 
+    <!-- About Section -->
+    <section id="about" class="section about">
+      <h2 class="section-title">About</h2>
+      <p>I blend creative instincts with no‑nonsense security. You’ll get clear policies, clean detections, and documents people actually read.</p>
     </section>
   </main>
 
-  <footer class="wrap footer">
-    <p>© 2025 Kristen Christiansen · MIT License · Built on GitHub Pages</p>
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="wrap footer-inner">
+      <small>&copy; <span id="year"></span> Kristen Christiansen · Atlanta, GA</small>
+      <a class="footer-link" href="mailto:your.email@example.com">your.email@example.com</a>
+    </div>
   </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
+    <!-- Résumé Embed -->
+    <section id="resume-embed" class="section resume-embed">
+      <h2 class="section-title">Résumé</h2>
+      <object data="kristen_resume.pdf" type="application/pdf" class="resume-frame">
+        <p>Unable to display the résumé. <a href="kristen_resume.pdf" target="_blank" rel="noopener">Download PDF</a></p>
+      </object>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="section about">
+      <h2 class="section-title">About</h2>
+      <p>I blend creative instincts with no‑nonsense security. You’ll get clear policies, clean detections, and documents people actually read.</p>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="wrap footer-inner">
+      <small>© <span id="year"></span> Kristen Christiansen · Atlanta, GA</small>
+      <a class="footer-link" href="mailto:your.email@example.com">your.email@example.com</a>
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
