--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kristen Christiansen — Security Portfolio</title>
-
   <!-- Readable, calm typography -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
   <!-- Simple top nav -->
   <header class="site-header">
     <div class="wrap header-inner">
@@ -20,31 +18,33 @@
       </div>
       <nav class="nav">
         <a href="#projects">Projects</a>
-        <a href="#resume-embed">Résumé</a>
+        <a href="#resume">Résumé</a>
         <a href="#about">About</a>
       </nav>
     </div>
   </header>
 
-  <!-- HERO: split layout with photo and tagline -->
+  <!-- HERO: tagline across the top -->
   <section class="hero">
+    <!-- Tagline spans the full width -->
+    <div class="wrap">
+      <h1 class="hero-title">Security with an artist’s eye</h1>
+      <p class="hero-subtitle">Calm, clear, human‑centered defensive work.</p>
+    </div>
+    <!-- Actions and photo below the tagline -->
     <div class="wrap hero-inner">
       <div class="hero-content">
-        <h1 class="hero-title">Security with an artist’s eye</h1>
-        <p class="hero-subtitle">Calm, clear, human‑centered defensive work.</p>
         <div class="hero-actions">
-          <a class="btn btn-primary" href="kristen_resume.pdf" target="_blank" rel="noopener">View Résumé (PDF)</a>
-          <a class="btn btn-ghost" href="#resume-embed" rel="noopener">Read Inline ↓</a>
+          <a class="btn btn-primary" href="resume.pdf" download>Download Résumé (PDF)</a>
         </div>
       </div>
       <div class="hero-photo-holder">
-        <img src="photo_small.jpg" alt="Portrait of Kristen Christiansen" class="hero-photo" />
+        <img src="photo.jpg" alt="Portrait of Kristen Christiansen" class="hero-photo" />
       </div>
     </div>
   </section>
 
   <main class="wrap">
-
     <!-- Featured Projects Section -->
     <section id="projects" class="section">
       <h2 class="section-title">Featured Projects</h2>
@@ -52,7 +52,7 @@
         <!-- Project 1 -->
         <article class="card">
           <div class="card-body">
-            <div class="emoji" aria-hidden="true">🕉️</div>
+            <div class="emoji" aria-hidden="true">🛡️</div>
             <h3>VIP Event Insider‑Threat Policy</h3>
             <p>Least‑privilege access, reporting pathways, and continuous monitoring for high‑stakes events.</p>
             <ul class="meta">
@@ -65,12 +65,11 @@
             </div>
           </div>
         </article>
-
         <!-- Project 2 -->
         <article class="card">
           <div class="card-body">
             <div class="emoji" aria-hidden="true">🕵️</div>
-            <h3>Honeypot & Alerting</h3>
+            <h3>HoneyTrap Honeypot</h3>
             <p>Deceptive services attract misuse inside a segmented lab, with alerting on interaction.</p>
             <ul class="meta">
               <li>Focus: Detection engineering</li>
@@ -82,13 +81,12 @@
             </div>
           </div>
         </article>
-
         <!-- Project 3 -->
         <article class="card">
           <div class="card-body">
             <div class="emoji" aria-hidden="true">📊</div>
             <h3>Log Anomaly Spotter</h3>
-            <p>Baselines user access and flags deviations using simple statistical thresholds and workflows.</p>
+            <p>Baselines user access and flags deviations using statistical methods and intuitive workflows.</p>
             <ul class="meta">
               <li>Focus: Practical detection</li>
               <li>Deliverables: Rules, dashboard</li>
@@ -99,7 +97,6 @@
             </div>
           </div>
         </article>
-
         <!-- Project 4 -->
         <article class="card">
           <div class="card-body">
@@ -119,40 +116,11 @@
       </div>
     </section>
 
-        <!-- Résumé Embed -->
-    <section id="resume-embed" class="section resume-embed">
+    <!-- Resume Section with download only -->
+    <section id="resume" class="section resume-section">
       <h2 class="section-title">Résumé</h2>
-      <object data="kristen_resume.pdf" type="application/pdf" class="resume-frame">
-        <p>Unable to display the résumé. <a href="kristen_resume.pdf" target="_blank" rel="noopener">Download PDF</a></p>
-      </object>
-    </section>
-
-    <!-- About Section -->
-    <section id="about" class="section about">
-      <h2 class="section-title">About</h2>
-      <p>I blend creative instincts with no‑nonsense security. You’ll get clear policies, clean detections, and documents people actually read.</p>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="wrap footer-inner">
-      <small>&copy; <span id="year"></span> Kristen Christiansen · Atlanta, GA</small>
-      <a class="footer-link" href="mailto:your.email@example.com">your.email@example.com</a>
-    </div>
-  </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-</body>
-</html>
-    <!-- Résumé Embed -->
-    <section id="resume-embed" class="section resume-embed">
-      <h2 class="section-title">Résumé</h2>
-      <object data="kristen_resume.pdf" type="application/pdf" class="resume-frame">
-        <p>Unable to display the résumé. <a href="kristen_resume.pdf" target="_blank" rel="noopener">Download PDF</a></p>
-      </object>
+      <p>You can download my résumé here:</p>
+      <a class="btn btn-primary" href="resume.pdf" download>Download Résumé (PDF)</a>
     </section>
 
     <!-- About Section -->
@@ -166,7 +134,7 @@
   <footer class="footer">
     <div class="wrap footer-inner">
       <small>© <span id="year"></span> Kristen Christiansen · Atlanta, GA</small>
-      <a class="footer-link" href="mailto:your.email@example.com">your.email@example.com</a>
+      <a class="footer-link" href="mailto:khchristiansen91@gmail.com">khchristiansen91@gmail.com</a>
     </div>
   </footer>
 
