feat: update resume and certifications; tagline across top and updated contact

--- a/index.html
+++ b/index.html
@@ -123,6 +123,85 @@
       <a class="btn btn-primary" href="resume.pdf" download>Download Résumé (PDF)</a>
     </section>
 
+    <!-- Certifications Section -->
+    <section id="certifications" class="section certifications">
+      <h2 class="section-title">Certifications</h2>
+      <div class="grid">
+        <!-- Microsoft Cybersecurity Analyst -->
+        <article class="card">
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">🔐</div>
+            <h3>Microsoft Cybersecurity Analyst</h3>
+            <p>Professional certificate covering identity, threat mitigation, Azure, compliance, and SC‑900 exam preparation.</p>
+            <a class="btn btn-ghost" href="microsoft_cybersecurity_analyst.pdf" download>Download Cert</a>
+          </div>
+        </article>
+        <!-- CompTIA A+ Core 1 -->
+        <article class="card">
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">🖥️</div>
+            <h3>CompTIA A+ Core 1</h3>
+            <p>IT fundamentals, hardware configuration, networking, virtualization, and security essentials.</p>
+            <a class="btn btn-ghost" href="comptia_a_plus_core1.pdf" download>Download Cert</a>
+          </div>
+        </article>
+        <!-- CompTIA A+ Core 2 -->
+        <article class="card">
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">💻</div>
+            <h3>CompTIA A+ Core 2</h3>
+            <p>Operating systems, troubleshooting, security, and IT operational procedures.</p>
+            <a class="btn btn-ghost" href="comptia_a_plus_core2.pdf" download>Download Cert</a>
+          </div>
+        </article>
+        <!-- CompTIA Security+ -->
+        <article class="card">
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">🔒</div>
+            <h3>CompTIA Security+</h3>
+            <p>Risk management, cryptography, secure networks, cloud and wireless security, and incident response.</p>
+            <a class="btn btn-ghost" href="comptia_security_plus.pdf" download>Download Cert</a>
+          </div>
+        </article>
+        <!-- CompTIA CySA+ -->
+        <article class="card">
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">🛡️</div>
+            <h3>CompTIA CySA+</h3>
+            <p>Detection, analysis, and response to cybersecurity threats, vulnerability management, and incident handling.</p>
+            <a class="btn btn-ghost" href="comptia_cysa.pdf" download>Download Cert</a>
+          </div>
+        </article>
+        <!-- Google Cybersecurity -->
+        <article class="card">
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">🌐</div>
+            <h3>Google Cybersecurity</h3>
+            <p>Eight‑course program covering foundations, risk management, networking, Linux, SQL, SIEM tools, and Python automation.</p>
+            <a class="btn btn-ghost" href="google_cybersecurity.pdf" download>Download Cert</a>
+          </div>
+        </article>
+        <!-- ISC² Security Principles -->
+        <article class="card">
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">📜</div>
+            <h3>ISC² Security Principles</h3>
+            <p>Fundamental security principles and best practices for protecting organizational assets.</p>
+            <a class="btn btn-ghost" href="isc2_security_principles.pdf" download>Download Cert</a>
+          </div>
+        </article>
+        <!-- Homeland Security & Cybersecurity Connection -->
+        <article class="card">
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">🏛️</div>
+            <h3>Homeland Security & Cybersecurity</h3>
+            <p>Course on the intersection of homeland security and cybersecurity.</p>
+            <a class="btn btn-ghost" href="homeland_security_cybersecurity.pdf" download>Download Cert</a>
+          </div>
+        </article>
+      </div>
+    </section>
+
     <!-- About Section -->
     <section id="about" class="section about">
       <h2 class="section-title">About</h2>
