Add AI Security Assistant and Hidden Malware Hunt projects; update footer location to Richmond Hill, GA

--- a/index.html
+++ b/index.html
@@ -199,7 +199,41 @@
             <a class="btn btn-ghost" href="homeland_security_cybersecurity.pdf" download>Download Cert</a>
           </div>
         </article>
-      </div>
+              <!-- Project 7 -->
+        <article class="card">
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">🤖</div>
+            <h3>AI Security Assistant</h3>
+            <p>Large language models parse logs, triage alerts, and generate security policies to accelerate incident response.</p>
+            <ul class="meta">
+              <li>Focus: AI & Automation</li>
+              <li>Deliverables: Python script, policy generator, dataset</li>
+            </ul>
+            <div class="actions">
+              <a class="btn btn-ghost" href="07-ai-security-assistant/README.md" target="_blank" rel="noopener">Details</a>
+              <a class="btn btn-primary" href="07-ai-security-assistant/" target="_blank" rel="noopener">Repo</a>
+            </div>
+          </div>
+        </article>
+
+        <!-- Project 8 -->
+        <article class="card">
+          <div class="card-body">
+            <div class="emoji" aria-hidden="true">🕵️</div>
+            <h3>Hidden Malware Hunt</h3>
+            <p>Advanced forensics and network analysis uncover a stealthy backdoor hidden in benign traffic and memory dumps.</p>
+            <ul class="meta">
+              <li>Focus: Threat Hunting & Forensics</li>
+              <li>Deliverables: Analysis report, YARA rules, detection script</li>
+            </ul>
+            <div class="actions">
+              <a class="btn btn-ghost" href="08-hidden-malware-hunt/README.md" target="_blank" rel="noopener">Details</a>
+              <a class="btn btn-primary" href="08-hidden-malware-hunt/" target="_blank" rel="noopener">Repo</a>
+            </div>
+          </div>
+        </article>
+</iv>
+      
     </section>
 
     <!-- About Section -->
@@ -212,7 +246,7 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="wrap footer-inner">
-      <small>© <span id="year"></span> Kristen Christiansen · Atlanta, GA</small>
+      <small>© <span id="year"></span> Kristen Christiansen - Richmond Hill, GA
       <a class="footer-link" href="mailto:khchristiansen91@gmail.com">khchristiansen91@gmail.com</a>
     </div>
   </footer>
